fix: separator. feat: parse multi value header in request